--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "datejs": "^1.0.0-rc3"
+    "css-loader": "^3.4.2",
+    "datejs": "^1.0.0-rc3",
+    "style-loader": "^1.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
